@@ -3,8 +3,8 @@
 # 
 #
 
-* try to address pycurl failing activity tests or raise not
-   applicable otherwise
+* add more tests for has and readv (_get_full wasn't addressed
+   by jam's patch but _get_ranged should be reported twice currently).
 
 * complete _ReportingFileSocket implementation for write
    operations ?
