@@ -12,6 +12,10 @@ IN DEVELOPMENT
     * Progress bars now show the rate of activity for some sftp 
       operations, and they are drawn different.  (Martin Pool, #172741)
 
+    * Progress bars now show the rate of activity for some^H *all* hhtp ;)
+      operations for both urllib and pycurl implementations.
+      (Vincent Ladeuil)
+
   BUG FIXES:
 
     * There was a bug in how we handled resolving when a file is deleted
